[metadata]
name = libsigopt
version = 1.0.0
description = SigOpt computation libraries
license = Apache-2.0
url = https://sigopt.org
maintainer = SigOpt
maintainer_email = support@sigopt.com
long_description = SigOpt computation libraries
classifiers =
  Development Status :: 5 - Production/Stable

[options]
python_requires = >=3.7
packages = find_namespace:
install_requires = file: requirements.txt

[options.packages.find]
exclude=
  test*
